2019/5/12:<feat,fix>:<adapter,bean,weight,view>: 1.完成了体系相关的内容 2.修复了在无网络情况下刷新首页会闪退的bug

--- a/WanAndroidApp/app/src/main/res/layout/my_system_bar.xml
+++ b/WanAndroidApp/app/src/main/res/layout/my_system_bar.xml
@@ -3,17 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:orientation="horizontal"
-    android:background="@drawable/bar_color"
-    >
-
+    android:background="@drawable/bar_color">
 
     <ImageView
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@drawable/ic_my_bar_menu"
+        android:src="@drawable/ic_back"
         android:layout_centerVertical="true"
-        android:id="@+id/myBar_imageView_menu"
+        android:id="@+id/mySystemBar_imageView_back"
         android:layout_marginLeft="13dp"/>
 
 
@@ -23,15 +20,10 @@
         android:text="首页"
         android:textSize="20dp"
         android:textColor="#ffffff"
-        android:id="@+id/myBar_textView_message"
+        android:id="@+id/mySystemBar_textView_message"
         android:layout_centerInParent="true"/>
 
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:src="@drawable/ic_search"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="13dp"/>
+
+
 
 </RelativeLayout>
