--- a/WanAndroidApp/app/src/main/res/layout/fragment_system.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_system.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/relative_layout"
+    tools:context=".MainActivity">
 
 
-    <TextView
+
+
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="system"/>
+        android:id="@+id/system_listView_showCharacterItem"
+        android:dividerHeight="10dp"
+        android:divider="@drawable/list_view_driver">
+
+    </ListView>
 
 
 
-
-</LinearLayout>
+</FrameLayout>
