2019/5/14:<feat>:<adapter,bean,db,util,view>: 1.新增了搜索功能 2.新增了搜索热词功能

--- a/WanAndroidApp/app/src/main/res/layout/my_bar_layout.xml
+++ b/WanAndroidApp/app/src/main/res/layout/my_bar_layout.xml
@@ -32,6 +32,7 @@
         android:src="@drawable/ic_search"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="13dp"/>
+        android:layout_marginRight="13dp"
+        android:id="@+id/myBar_imageView_search"/>
 
 </RelativeLayout>
