--- a/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="navigation"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="这个功能才不是被咕咕咕了呢"
+        android:layout_centerInParent="true"/>
 
 
 
 
-</LinearLayout>
+</RelativeLayout>
