--- a/WanAndroidApp/app/src/main/res/layout/activity_show_collect.xml
+++ b/WanAndroidApp/app/src/main/res/layout/activity_show_collect.xml
@@ -4,30 +4,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.ShowCollectActivity"
-    >
+    android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:text="哦豁,莫得数据"
+        android:textSize="20dp"
+        android:visibility="gone"
+        android:id="@+id/collect_textView_noMessage"/>
+
 
     <com.example.sorena.wanandroidapp.widget.SystemBarLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/showCollectActivity_SystemBarLayout_bar"
-        android:layout_marginBottom="10dp">
+        android:id="@+id/mySystemBar">
     </com.example.sorena.wanandroidapp.widget.SystemBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/showCollectActivity_SwipeRefreshLayout_refresh"
-        android:layout_below="@id/showCollectActivity_SystemBarLayout_bar">
+        android:id="@+id/collect_SwipeRefreshLayout_refresh"
+        android:layout_below="@id/mySystemBar">
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/showCollectActivity_ListView_showCollects"
+            android:id="@+id/collect_listView_showItem"
             android:dividerHeight="10dp"
             android:divider="#00000000"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            >
+
         </ListView>
+
+
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
