2019/5/18:<feat>: 1.增加了体系相关的内容

--- a/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,13 @@
             >
         </ListView>
 
+
+
+        <com.example.sorena.wanandroidapp.widget.RefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </com.example.sorena.wanandroidapp.widget.RefreshLayout>
+
     </RelativeLayout>
 
 
