--- a/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
+    <ListView
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:id="@+id/MainActivity_listView_showData"
+        android:divider="#00000000"
+        android:background="@drawable/nav_list_bg_color"
+        android:scrollbars="none">
+    </ListView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="这个功能才不是被咕咕咕了呢"
-        android:layout_centerInParent="true"/>
+    <ListView
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="7"
+        android:divider="#00000000"
+        android:id="@+id/MainActivity_listView_showFlowData"
+        />
 
-
-
-
-</RelativeLayout>
+</LinearLayout>
