--- a/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,8 @@
 
         <com.example.sorena.wanandroidapp.widget.RefreshLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/mainActivity_refresh">
         </com.example.sorena.wanandroidapp.widget.RefreshLayout>
 
     </RelativeLayout>
