--- a/WanAndroidApp/app/src/main/res/layout/refresh_layout.xml
+++ b/WanAndroidApp/app/src/main/res/layout/refresh_layout.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        >
         <TextView
             android:id="@+id/refreshLayout_textView_showError"
             android:layout_width="wrap_content"
