2019/5/21::<feat>:<view,adapter> 1.重写了体系的布局

--- a/WanAndroidApp/app/src/main/res/values/styles.xml
+++ b/WanAndroidApp/app/src/main/res/values/styles.xml
@@ -33,6 +33,9 @@
 
 
 
+    <style name="MyTab" parent="TextAppearance.AppCompat.Button">
+        <item name="textAllCaps">false</item>
+    </style>
     <!--android:layout_width="0dp"-->
     <!--android:layout_height="match_parent"-->
     <!--android:paddingTop="8dp"-->
