--- a/WanAndroidApp/app/src/main/res/layout/fragment_system.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_system.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +9,11 @@
     tools:context=".MainActivity">
 
 
+    <com.example.sorena.wanandroidapp.widget.RefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/systemFragment_refreshLayout_refresh">
+    </com.example.sorena.wanandroidapp.widget.RefreshLayout>
 
 
 
@@ -23,4 +28,4 @@
 
 
 
-</FrameLayout>
+</RelativeLayout>
