2019/5/22:<feat,refector>:<view,manager,adapter> 1.从backups分支合并到master

--- a/WanAndroidApp/app/src/main/res/layout/my_bar_layout.xml
+++ b/WanAndroidApp/app/src/main/res/layout/my_bar_layout.xml
@@ -32,7 +32,6 @@
         android:src="@drawable/ic_search"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="13dp"
-        android:id="@+id/myBar_imageView_search"/>
+        android:layout_marginRight="13dp"/>
 
 </RelativeLayout>
