--- a/WanAndroidApp/app/src/main/res/layout/my_system_bar.xml
+++ b/WanAndroidApp/app/src/main/res/layout/my_system_bar.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@drawable/ic_back_write"
+        android:src="@drawable/ic_back"
         android:layout_centerVertical="true"
         android:id="@+id/mySystemBar_imageView_back"
         android:layout_marginLeft="13dp"/>
