--- a/WanAndroidApp/app/src/main/res/values/styles.xml
+++ b/WanAndroidApp/app/src/main/res/values/styles.xml
@@ -20,6 +20,22 @@
 
     </style>
 
+
+    <style name="SearchEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@android:color/darker_gray</item>
+        <item name="colorControlActivated">@android:color/darker_gray</item>
+    </style>
+
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@android:color/darker_gray</item>
+        <item name="colorControlActivated">@android:color/holo_blue_dark</item>
+    </style>
+
+
+
+    <style name="MyTab" parent="TextAppearance.AppCompat.Button">
+        <item name="textAllCaps">false</item>
+    </style>
     <!--android:layout_width="0dp"-->
     <!--android:layout_height="match_parent"-->
     <!--android:paddingTop="8dp"-->
