--- a/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_navigation.xml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView
+    <com.example.sorena.wanandroidapp.widget.RefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="navigation"/>
+        android:id="@+id/navFragment_refreshLayout_refresh">
+    </com.example.sorena.wanandroidapp.widget.RefreshLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+        <ListView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:id="@+id/MainActivity_listView_showData"
+            android:divider="#00000000"
+            android:background="@drawable/nav_list_bg_color"
+            android:scrollbars="none">
+        </ListView>
 
+        <ListView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:divider="#00000000"
+            android:id="@+id/MainActivity_listView_showFlowData"
+            />
+    </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
