--- a/WanAndroidApp/app/src/main/res/layout/nav_tv.xml
+++ b/WanAndroidApp/app/src/main/res/layout/nav_tv.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:text="Helloworld"
+    android:textSize="15dp"
     android:padding="5dp"
     android:background="@drawable/tv_background">
 
