--- a/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<com.example.sorena.wanandroidapp.widget.SwipeRefreshLayoutIncludeVP
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,8 +22,6 @@
             >
         </ListView>
 
-
-
         <com.example.sorena.wanandroidapp.widget.RefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -34,4 +31,4 @@
     </RelativeLayout>
 
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</com.example.sorena.wanandroidapp.widget.SwipeRefreshLayoutIncludeVP>
