--- a/WanAndroidApp/app/src/main/res/layout/activity_show_collect.xml
+++ b/WanAndroidApp/app/src/main/res/layout/activity_show_collect.xml
@@ -43,5 +43,12 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <com.example.sorena.wanandroidapp.widget.FloatingButtonLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/showCollectActivity_fb_toTop">
+    </com.example.sorena.wanandroidapp.widget.FloatingButtonLayout>
 
 </RelativeLayout>
