--- a/WanAndroidApp/app/src/main/res/layout/activity_show_result.xml
+++ b/WanAndroidApp/app/src/main/res/layout/activity_show_result.xml
@@ -27,6 +27,14 @@
             android:layout_height="match_parent"
             android:id="@+id/showResultActivity_listView_showResult">
         </ListView>
-
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <com.example.sorena.wanandroidapp.widget.FloatingButtonLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/showResultActivity_fb_toTop">
+    </com.example.sorena.wanandroidapp.widget.FloatingButtonLayout>
+
 </RelativeLayout>
