--- a/WanAndroidApp/app/src/main/res/layout/fragment_project_viewpager.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_project_viewpager.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -20,8 +19,14 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <com.example.sorena.wanandroidapp.widget.FloatingButtonLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/projectFragment_fb_toTop">
+
+    </com.example.sorena.wanandroidapp.widget.FloatingButtonLayout>
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
