--- a/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<com.example.sorena.wanandroidapp.widget.SwipeRefreshLayoutIncludeVP
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,15 +22,22 @@
             >
         </ListView>
 
-
-
         <com.example.sorena.wanandroidapp.widget.RefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/mainActivity_refresh">
         </com.example.sorena.wanandroidapp.widget.RefreshLayout>
 
+        <com.example.sorena.wanandroidapp.widget.FloatingButtonLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/homeFragment_fb_toTop">
+
+        </com.example.sorena.wanandroidapp.widget.FloatingButtonLayout>
+
     </RelativeLayout>
 
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</com.example.sorena.wanandroidapp.widget.SwipeRefreshLayoutIncludeVP>
