--- a/WanAndroidApp/app/src/main/res/layout/fragment_project.xml
+++ b/WanAndroidApp/app/src/main/res/layout/fragment_project.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@drawable/tab_layout_background"
-
+        app:tabTextAppearance="@style/MyTab"
         app:tabMode="scrollable"
         app:tabIndicatorHeight="0dp"
         app:tabSelectedTextColor="#ff7a61"
@@ -27,6 +28,12 @@
         android:layout_below="@+id/tab_layout">
     </android.support.v4.view.ViewPager>
 
+
+    <com.example.sorena.wanandroidapp.widget.RefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/projectFragment_refreshLayout_refresh">
+    </com.example.sorena.wanandroidapp.widget.RefreshLayout>
 
 
 
